deploy_and_service.yml
apiVersion: v1
kind: Service
metadata:
  name: it-chatbot 
spec:
  type: NodePort
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: it-chatbot 
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: it-chatbot 
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: it-chatbot 
    spec:
      containers:
      - name: it-chatbot 
        image: kdunetz/it-chatbot:1.0 
        imagePullPolicy: Always 
        ports:
        - containerPort: 3000
