ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
  name:  it-chatbot-ingress
  namespace: default
spec:
  rules:
  - host: chatbot
    http:
      paths:
      - backend:
          serviceName: it-chatbot 
          servicePort: 3000 
status:
  loadBalancer:
    ingress:
    - ip: 169.45.189.35
